# llvm-cmake-hello-8bit

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md
cmake/: auto-toolchain.cmake  common-config.cmake
src/: CMakeLists.txt  main.c  system.h
